# nerve-pool

./: .gitignore  LICENSE.md  README.md  example_pooling_mesh.py  face_transform.py  notes.md  one_skeleton.py  pyproject.toml  reimplementation_momentcurve_embedding.py  scratch_mantra.py  scratch_model_mesh.py  scratch_pool_graph.py  scratch_pooling.py  test.py  train_folder.sh  validate_folder.sh
configs/: sweep-mantra2d.yaml  sweep-nopool.yaml
configs/configs/: ascratch.yaml  nervepool.yaml  nervepool_mutag.yaml  sweep-diffpool.yaml  sweep-mincut.yaml  sweep-nervepool.yaml  sweep-sagpool.yaml  sweep-topk.yaml
configs/diffpool/: diffpool-DD-2020.yaml  diffpool-DD-2022.yaml  diffpool-DD-2023.yaml  diffpool-DD-2024.yaml  diffpool-DD-2025.yaml  diffpool-ENZYMES-2020.yaml  diffpool-ENZYMES-2021.yaml  diffpool-ENZYMES-2023.yaml  diffpool-ENZYMES-2024.yaml  diffpool-ENZYMES-2025.yaml  diffpool-MUTAG-2020.yaml  diffpool-MUTAG-2021.yaml  diffpool-MUTAG-2022.yaml  diffpool-MUTAG-2025.yaml  diffpool-PROTEINS-2021.yaml  diffpool-PROTEINS-2022.yaml  diffpool-PROTEINS-2024.yaml  diffpool-PROTEINS-2025.yaml
configs/mantra2d/: diffpool-2020.yaml  diffpool-2021.yaml  diffpool-2022.yaml  diffpool-2023.yaml  diffpool-2024.yaml  diffpool-2025.yaml  mincut-2020.yaml  mincut-2021.yaml  mincut-2022.yaml  mincut-2023.yaml  mincut-2024.yaml  mincut-2025.yaml  nervepool-2020.yaml  (+29 more)
notebooks/: dataset_analysis.py  tables.py  tables_mantra.py
src/: loaders.py  loggers.py  sweep_mantra.py  sweeper.py  train.py  validate.py
tables/: mantra_table.tex  mantratable.md  table.md  table.tex
(+311 files in other folders)
