[project]
name = "nerve-pool-ml"
version = "0.1.0"
description = "A pooling layer for simplicial complexes."
readme = "README.md"
authors = [
    { name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de" },
    { name = "Sarah McGuire", email = "" },
]
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.1",
]

[project.scripts]
train = "train:main"
datasets = "datasets.create:main"
validate = "validate:main"
sweep = "sweeper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
sources = ["src"]

[tool.pyright]
strict = ["strec"]
ignore = ["tests"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
]

